# Cours

./: .gitignore  README.md
2018_2019/L2-2018-2019(1)/: .gitmodules  Fiche de renseignements.doc  README.md
2019_2020/Semestre_4_2019_2020/INFO0402_C++/TP/TP07/: CMakeLists.txt  tp07.html
2019_2020/Semestre_4_2019_2020/INFO0402_C++/TP/TP07/solution/: CMakeLists.txt  main-fixed.cpp  main-static.cpp
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/: CMakeLists.txt
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/Arbre/: arbre.h  main_arbre.c
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/General/: Ackermann.c  Fibonnaci.c  FibonnaciRec.c  TailleChaine.c
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/Huffman/: huffman.c  huffman.h  main_huffman.c
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/List/: list.c  list.h  main_list.c
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/Matrice/: Complement.c  MinMax.c  Multiplication.c  Union.c
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/Pile/: main.c  main_pile.c  pile.c  pile.h
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/TP1/: Exo1.c  Exo2.c  IntersectionMatrice.c  MinMaxMatrice.c  NombreParfait.c  Normalisation.c
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/TP2/: Tassement.c
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/TP3/: Fibonnaci.c  Fibonnaci_bis.c  Lol.c  Trie.c
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/Tableau/: Concatenation.c  Conversion.c  Inversion.c  Majorite.c
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0401 - Algorithmique/TP/Trie/: Bulle.c  Fusion.c  Hollandais.c  Insertion.c  Rapide.c
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0402 - C++/TP/: CMakeLists.txt
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0402 - C++/TP/TP1/: Ex1a.cpp
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0402 - C++/TP/TP2/: Exo1.cpp  Exo2.cpp
2020_2021/L2_2020-2021_D.Corentin/Semestre 4/Info0402 - C++/TP/TP5/: CMakeLists.txt  Curve.h  SVG.cpp  StaticArray.h  Surface.cpp  makefile.bak  test04.html  tp5.cpp
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/: CMakeLists.txt  Corrections_&_Profilage_TONNELLE-Nathan.docx  gprof_ker.txt
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/ascq_me/: Doxyfile  LICENCE  Makefile  README  ascq_me  ascq_me.doxytag  data.txt  gmon.out  gprof2dot_ker.dot
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/ascq_me/_configuration/: apo_mascot.config  apo_mascot_fixed_modif.config  cytc.config  cytc_alone_theo.config  default_configuration.config  default_configuration_albu_name.config  first.config  first_decoy.config  first_limited_apo_weigth.config  first_multi_modif.config  human_filter.config  ker.config  ker_human.config  ker_human_apo_weight.config  one_miss_cleavage_apo_mascot.config
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/ascq_me/_fasta/: albumin.fas  apo_mascot.fas  cytc.fas  cytc_alone.fas  first.fas  ker.fas
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/ascq_me/_spectrum_data/: Caro.txt  cytc_bovin_trypsin.txt  cytc_bovin_trypsin_mascot.txt  cytcdenature2.txt
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/ascq_me/fft_src/: fft.tbz2
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/ascq_me/internal/: aaisotable  atom_weight.a_prot.txt  enztable.aprot  modification_file
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/ascq_me/src/: aa.cpp  ascq_me.cpp  ascq_me.doxytag  ascq_me_configuration.cpp  ascq_me_display.cpp  cleavage.cpp  complex.cpp  digest.cpp  error.cpp  fft4g.cpp  formula.cpp  isodistrib.cpp  modification_table.cpp  modifications_for_digestion.cpp  seqio.cpp  tables.cpp  util.cpp
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/ascq_me/src/include/: aa.h  ascq_me_configuration.h  ascq_me_display.h  cleavage.h  complex.h  digest.h  error.h  formula.h  index.h  isodistrib.h  modification_table.h  modifications_for_digestion.h  seqio.h  tables.h  util.h
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/ascq_me/tests/: CMakeLists.txt
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/EtudeCas/gprof2dot-master/tests/xperf/: val3_xperf.xperf
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/TP5/exemple_01/: CMakeLists.txt
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/TP5/exemple_02/: CMakeLists.txt
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/TP5/exemple_02/src/: HelloWorld.cpp
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/TP5/exemple_04/: CMakeLists.txt
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/TP5/exemple_04/MyStrlen/: CMakeLists.txt
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/TP5/exemple_04/src/: CMakeLists.txt  HelloWorld.cxx
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/TP5/exemple_05/: CMakeLists.txt
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/TP5/exemple_08/MyStrlen/: CMakeLists.txt  myStrlen.cxx  myStrlen.h
2020_2021/L3_S5_2020-2021/INFO0504_génie logiciel/INFO504/TP5/exemple_08/tests/: CMakeLists.txt  Test_01.cxx
Semestre_1/INFO0101_algo_Java/: correction_ds_info0101_1_2016.docx  info 101.docx
Semestre_2/INFO0201_POO/: ExempleEcriture.java
Semestre_2/INFO204_architecture/: INFO0204.docx
Semestre_2/PPRO0201_metier/: Fiche_Interview.doc  Fiche_documentaire.doc  PPRO0201.docx
Semestre_2/PPRO0203_stage/: PPRO0203.docx
Semestre_3/: remise projets.docx
Semestre_3/INFO0303_Php_Laravel/: info303.docx
Semestre_3/INFO0304_BDD/: info0304.docx
Semestre_3_2019_2020/INFO0302_Unix/: liens_utiles.txt
Semestre_3_2019_2020/INFO0303_Php_Laravel/: PHP - Raccourci.lnk  liens_utiles.txt
Semestre_4/INFO0402_C++/: indo 402.docx
(+2649 files in other folders)
